fixed topics page small overflow bug

--- a/client/src/components/topics_page/TopicsPage.scss
+++ b/client/src/components/topics_page/TopicsPage.scss
@@ -14,7 +14,7 @@
   }
 
   .topics-display {
-    @include displayFlex(column);
+    @include displayFlex(column, flex-start);
     width: 100%;
     overflow-y: auto;
     padding-bottom: 70px;
